--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gpreiss.github.io/react-airbnb-clone/",
+  "homepage": "https://gpreiss.github.io/react-airbnb-clone",
   "name": "react-airbnb-clone",
   "version": "0.1.0",
   "private": true,
